--- a/src/main/resources/static/post.html
+++ b/src/main/resources/static/post.html
@@ -24,10 +24,10 @@
                     isSingle: true,
                     salaryNum: "12345678.44",
                     // salaryNum: "123456718.4412",  //不合法薪水
-                    girl: {
-                        isMarry: false,
-                        name: "girlname"
-                    },
+                    // girl: {
+                    //     isMarry: false,
+                    //     name: "girlname"
+                    // },
                     hobbyList: ["吃","喝","玩","乐"],
                     dreamList:[{
                         txt: "中国梦",
