--- a/src/main/resources/static/validate.html
+++ b/src/main/resources/static/validate.html
@@ -87,8 +87,8 @@
 <script>
     $("#p2").on("click", function () {
         $.ajax({
-            url: "/validate/post/vo?str1=df121@163.com&int1=11111",
-            // url: "/validate/post/vo",
+            // url: "/validate/post/vo?str1=df121@163.com&int1=11111",
+            url: "/validate/post/vo",
             type: "post",
             contentType: "application/json",
             dataType: "json",
